Исправить замечание ревьюера