@@ -1,7 +1,9 @@
 package ru.yandex.practicum.filmorate.storage.film;
 
 import lombok.extern.slf4j.Slf4j;
+
 import java.sql.Date;
+
 import org.springframework.jdbc.core.JdbcTemplate;
 import org.springframework.stereotype.Repository;
 import ru.yandex.practicum.filmorate.exception.NotFoundException;
@@ -18,69 +20,63 @@ import java.util.stream.Collectors;
 @Slf4j
 @Repository
 public class FilmDbStorage extends BaseStorage<Film> implements FilmStorage {
-
     private final GenreStorage genreStorage;
     private final MpaRatingStorage mpaRatingStorage;
 
-    private static final String FIND_ALL_SQL = """
-            SELECT f.*, m.* 
-            FROM films f 
-            LEFT JOIN mpa_ratings m ON f.mpa_rating_id = m.mpa_rating_id
+    private static final String FIND_ALL_QUERY = """
+            SELECT f.*, m.* FROM films f LEFT JOIN mpa_ratings AS m ON f.mpa_rating_id = m.mpa_rating_id
             ORDER BY f.film_id
             """;
 
-    public FilmDbStorage(JdbcTemplate jdbcTemplate,
-                         GenreStorage genreStorage,
+    public FilmDbStorage(JdbcTemplate jdbcTemplate, GenreStorage genreStorage,
                          MpaRatingStorage mpaRatingStorage) {
         super(jdbcTemplate);
         this.genreStorage = genreStorage;
         this.mpaRatingStorage = mpaRatingStorage;
     }
 
+
     @Override
     public List<Film> getAll() {
-        List<Film> list = jdbc.query(FIND_ALL_SQL, new FilmRowMapper());
-        enrichWithGenres(list);
-        enrichWithLikes(list);
-        return list;
+        List<Film> films = jdbc.query(FIND_ALL_QUERY, new FilmRowMapper());
+        addGenresToMovies(films);
+        addLikesToMovies(films);
+        return films;
     }
 
     @Override
     public Film create(Film film) {
-        // ensure MPA and genre names are consistent
-        if (film.getMpa() != null) {
-            film.setMpa(mpaRatingStorage.getById(film.getMpa().getId()));
-        }
+        film.setMpa(mpaRatingStorage.getById(film.getMpa().getId()));
+        film.getGenres().forEach(
+                genre -> genre.setName(genreStorage.getNameById(genre.getId()))
+        );
 
-        if (film.getGenres() != null) {
-            film.getGenres().forEach(g -> g.setName(genreStorage.getNameById(g.getId())));
-        }
-
-        long newId = insert(
+        long id = insert(
                 "INSERT INTO films (name, description, release_date, duration, mpa_rating_id) VALUES (?, ?, ?, ?, ?)",
                 film.getName(),
                 film.getDescription(),
                 Date.valueOf(film.getReleaseDate()),
                 film.getDuration(),
-                film.getMpa() == null ? null : film.getMpa().getId()
+                film.getMpa().getId()
         );
-        film.setId(newId);
+        film.setId(id);
 
-        if (film.getGenres() != null) {
-            String insertGenre = "INSERT INTO film_genres (film_id, genre_id) VALUES (?, ?)";
-            for (Genre g : film.getGenres()) {
-                jdbc.update(insertGenre, film.getId(), g.getId());
-            }
+        String insertGenresQuery = "INSERT INTO film_genres (film_id, genre_id) VALUES (?, ?)";
+        List<Genre> genres = new ArrayList<>(film.getGenres());
+        if (!genres.isEmpty()) {
+            jdbc.batchUpdate(insertGenresQuery, genres, genres.size(),
+                    (ps, genre) -> {
+                        ps.setLong(1, film.getId());
+                        ps.setInt(2, genre.getId());
+                    });
         }
-
         return film;
     }
 
+
     @Override
     public Film update(Film film) {
-        if (film.getMpa() != null) {
-            film.setMpa(mpaRatingStorage.getById(film.getMpa().getId()));
-        }
+        film.setMpa(mpaRatingStorage.getById(film.getMpa().getId()));
 
         String sql = "UPDATE films SET name=?, description=?, release_date=?, duration=?, mpa_rating_id=? WHERE film_id=?";
         update(sql,
@@ -88,88 +84,106 @@ public class FilmDbStorage extends BaseStorage<Film> implements FilmStorage {
                 film.getDescription(),
                 Date.valueOf(film.getReleaseDate()),
                 film.getDuration(),
-                film.getMpa() == null ? null : film.getMpa().getId(),
+                film.getMpa().getId(),
                 film.getId()
         );
-        // note: genres updating outside (if needed) — keep behavior consistent with previous impl
-        return film;
+
+        jdbc.update("DELETE FROM film_genres WHERE film_id = ?", film.getId());
+
+        List<Genre> genres = new ArrayList<>(film.getGenres());
+        if (!genres.isEmpty()) {
+            String insertGenresQuery = "INSERT INTO film_genres (film_id, genre_id) VALUES (?, ?)";
+            jdbc.batchUpdate(insertGenresQuery, genres, genres.size(),
+                    (ps, genre) -> {
+                        ps.setLong(1, film.getId());
+                        ps.setInt(2, genre.getId());
+                    });
+        }
+
+        return getById(film.getId());
     }
 
     @Override
     public Film getById(long id) {
         String sql = """
-                SELECT f.*, m.* 
-                FROM films f 
-                LEFT JOIN mpa_ratings m ON f.mpa_rating_id = m.mpa_rating_id 
+                SELECT f.*, m.*
+                FROM films f
+                LEFT JOIN mpa_ratings AS m ON f.mpa_rating_id = m.mpa_rating_id
                 WHERE f.film_id = ?
                 """;
-        Film f = findOne(sql, new FilmRowMapper(), id);
-        if (f == null) {
-            throw new NotFoundException("Фильм с id " + id + " не найден");
-        }
-        enrichWithGenres(List.of(f));
-        enrichWithLikes(List.of(f));
-        return f;
+        Film film = findOne(sql, new FilmRowMapper(), id);
+        if (film == null) throw new NotFoundException("Фильм с id " + id + " не найден");
+
+        addGenresToMovies(List.of(film));
+        addLikesToMovies(List.of(film));
+        return film;
     }
 
     @Override
     public List<Film> getPopular(int count) {
         String sql = """
-                SELECT f.*, m.mpa_rating_id, m.mpa_rating_name 
-                FROM films f
-                LEFT JOIN film_likes fl ON f.film_id = fl.film_id
-                JOIN mpa_ratings m ON f.mpa_rating_id = m.mpa_rating_id
-                GROUP BY f.film_id, m.mpa_rating_id, m.mpa_rating_name
-                ORDER BY COUNT(fl.user_id) DESC
-                LIMIT ?
+                SELECT f.*, m.mpa_rating_id, m.mpa_rating_name
+                            FROM films f
+                            LEFT JOIN film_likes fl ON f.film_id = fl.film_id
+                            JOIN mpa_ratings m ON f.mpa_rating_id = m.mpa_rating_id
+                            GROUP BY f.film_id
+                            ORDER BY COUNT(fl.user_id) DESC
+                            LIMIT ?
                 """;
-        List<Film> top = jdbc.query(sql, new FilmRowMapper(), count);
-        enrichWithGenres(top);
-        enrichWithLikes(top);
-        return top;
+        List<Film> films = jdbc.query(sql, new FilmRowMapper(), count);
+        addGenresToMovies(films);
+        addLikesToMovies(films);
+        return films;
     }
 
-    private void enrichWithLikes(List<Film> films) {
-        if (films == null || films.isEmpty()) return;
+    private void addLikesToMovies(List<Film> films) {
+        if (films.isEmpty()) return;
 
-        List<Long> ids = films.stream().map(Film::getId).collect(Collectors.toList());
-        String inClause = ids.stream().map(String::valueOf).collect(Collectors.joining(","));
-        String sql = "SELECT film_id, user_id FROM film_likes WHERE film_id IN (" + inClause + ")";
+        List<Long> filmIds = films.stream().map(Film::getId).toList();
 
-        Map<Long, Set<Long>> map = new HashMap<>();
+        String sql = String.format("SELECT film_id, user_id FROM film_likes WHERE film_id IN (%s)",
+                filmIds.stream().map(String::valueOf).collect(Collectors.joining(",")));
+
+        Map<Long, Set<Long>> likesMap = new HashMap<>();
+
         jdbc.query(sql, rs -> {
             long filmId = rs.getLong("film_id");
             long userId = rs.getLong("user_id");
-            map.computeIfAbsent(filmId, k -> new HashSet<>()).add(userId);
+            likesMap.computeIfAbsent(filmId, k -> new HashSet<>()).add(userId);
         });
 
-        for (Film f : films) {
-            f.setLikes(map.getOrDefault(f.getId(), new HashSet<>()));
+        for (Film film : films) {
+            Set<Long> likes = likesMap.getOrDefault(film.getId(), new HashSet<>());
+            film.setLikes(likes);
         }
     }
 
-    private void enrichWithGenres(List<Film> films) {
-        if (films == null || films.isEmpty()) return;
+    private void addGenresToMovies(List<Film> films) {
+        if (films.isEmpty()) return;
 
-        List<Long> ids = films.stream().map(Film::getId).collect(Collectors.toList());
-        String inClause = ids.stream().map(String::valueOf).collect(Collectors.joining(","));
+        List<Long> filmIds = films.stream()
+                .map(Film::getId)
+                .toList();
+
         String sql = String.format("""
                 SELECT fg.film_id, g.genre_id, g.genre_name
                 FROM film_genres fg
                 JOIN genres g ON fg.genre_id = g.genre_id
                 WHERE fg.film_id IN (%s)
                 ORDER BY g.genre_id
-                """, inClause);
+                """, filmIds.stream().map(String::valueOf).collect(Collectors.joining(",")));
 
-        Map<Long, LinkedHashSet<Genre>> map = new HashMap<>();
+        Map<Long, Set<Genre>> genresByFilmId = new HashMap<>();
+
         jdbc.query(sql, rs -> {
             long filmId = rs.getLong("film_id");
             Genre genre = new Genre(rs.getInt("genre_id"), rs.getString("genre_name"));
-            map.computeIfAbsent(filmId, k -> new LinkedHashSet<>()).add(genre);
+            genresByFilmId.computeIfAbsent(filmId, k -> new LinkedHashSet<>()).add(genre);
         });
 
-        for (Film f : films) {
-            f.setGenres(map.getOrDefault(f.getId(), new LinkedHashSet<>()));
+        for (Film film : films) {
+            Set<Genre> genres = genresByFilmId.getOrDefault(film.getId(), new LinkedHashSet<>());
+            film.setGenres(genres);
         }
     }
 }
